# solana-claude

./: .env.example  .gitignore  CONTRIBUTING.md  MIGRATE.md  README.md  SECURITY.md  SOUL.md  STRATEGY.md  TERMINAL.md  TRADE.md  architecture.md  bunfig.toml  netlify.toml  package-lock.json  package.json  skills-lock.json  tsconfig.base.json  tsconfig.build.json  tsconfig.json
.agents/skills/qedgen/: Cargo.toml  README.md  SKILL.md  claude.md  clawd.md  install.sh  package.json
.agents/skills/qedgen/crates/qedgen/: Cargo.toml
.agents/skills/qedgen/crates/qedgen/lean_support/: README.md  lakefile.lean
.agents/skills/qedgen/crates/qedgen/lean_support/QEDGen/Solana/: Cpi.lean
.agents/skills/qedgen/crates/qedgen/src/: api.rs  asm2lean.rs  consolidate.rs  main.rs  project.rs  spec.rs  validate.rs
.agents/skills/qedgen/crates/qedgen/templates/: Main.lean  PROMPT_TEMPLATE.md  README.lean.md  lakefile.lean
.agents/skills/qedgen/docs/: CNAME  index.html  llms-full.txt  llms.txt  qgn_demo.html  style.css
.agents/skills/qedgen/example/escrow/formal_verification/: EscrowProofs.lean  README.md  lakefile.lean
.agents/skills/qedgen/example/escrow/programs/escrow/src/: lib.rs
.agents/skills/qedgen/example/percolator/: Cargo.toml
.agents/skills/qedgen/example/percolator/formal_verification/: PercolatorProofs.lean
.agents/skills/qedgen/example/percolator/formal_verification/lean_support/QEDGen/Solana/: Token.lean
.agents/skills/qedgen/example/percolator/tests/: amm_tests.rs  proofs_safety.rs
.agents/skills/qedgen/examples/rust/escrow/: Anchor.toml
.agents/skills/qedgen/examples/rust/escrow/formal_verification/: EscrowProofs.lean  README.md  SPEC.md  VERIFICATION_SCOPE.md  lake-manifest.json  lakefile.lean
.agents/skills/qedgen/examples/rust/escrow/tests/: escrow.ts
.agents/skills/qedgen/examples/rust/percolator/: README.md  spec.md
.agents/skills/qedgen/examples/rust/percolator/formal_verification/: lake-manifest.json  lakefile.lean
.agents/skills/qedgen/examples/rust/percolator/scripts/: audit-proof-strength.md
.agents/skills/qedgen/examples/rust/percolator/src/: percolator.rs  wide_math.rs
.agents/skills/qedgen/examples/rust/percolator/tests/: fuzzing.proptest-regressions  fuzzing.rs  proofs_instructions.rs  proofs_invariants.rs  proofs_liveness.rs  proofs_v1131.rs  unit_tests.rs
.agents/skills/qedgen/examples/rust/percolator/tests/common/: mod.rs
.agents/skills/qedgen/examples/sbpf/counter/formal_verification/: CounterProg.lean  CounterProofs.lean  lake-manifest.json  lakefile.lean
.agents/skills/qedgen/examples/sbpf/counter/src/: counter.s
.agents/skills/qedgen/examples/sbpf/slippage/formal_verification/: SPEC.md  SlippageProg.lean  SlippageProofs.lean  lake-manifest.json  lakefile.lean
.agents/skills/qedgen/examples/sbpf/slippage/src/asm-slippage/: asm-slippage.s
.agents/skills/qedgen/examples/sbpf/transfer/formal_verification/: SPEC.md  TransferProg.lean  TransferProofs.lean  lake-manifest.json  lakefile.lean
.agents/skills/qedgen/examples/sbpf/transfer/src/: transfer.s
.agents/skills/qedgen/examples/sbpf/tree/formal_verification/: TreeProg.lean  TreeProofs.lean  lake-manifest.json  lakefile.lean
.agents/skills/qedgen/examples/sbpf/tree/src/: tree.s
.agents/skills/qedgen/lean_solana/: QEDGen.lean  README.md  test_lemmas.lean
.agents/skills/qedgen/lean_solana/QEDGen/Solana/: Authority.lean  Cpi.lean  SBPF.lean
.agents/skills/qedgen/lean_solana/QEDGen/Solana/SBPF/: Execute.lean  ISA.lean  Memory.lean  Tactic.lean
.agents/skills/qedgen/tools/: qedgen
.github/: dependabot.yml
MCP/: .gitignore  Dockerfile  fly.toml  package-lock.json  package.json  requirements.txt  test_grok_mcp.py
X/: server.py
agents/: .editorconfig  .i18nignore  .i18nrc.js  .releaserc.cjs  .vercel-deploy  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  agent-template-full.json  agent-template.json  drizzle.config.ts  humans.txt  llms.txt  meta.json  pump-fun-random-number.json  tsconfig.json
beepboop/: AGENTS.md  README.md  architecture-viz.html  demo.html
chess/chess-mcp-main/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  coverage.xml  pyproject.toml  server.json
chess/chess-mcp-main/.github/workflows/: docker-publish.yml  release.yml  sync-version.yml  tests.yml
chess/chess-mcp-main/src/chess_mcp/: __init__.py  main.py  server.py
chess/chess-mcp-main/tests/: test_server.py
chrome-extension/: .gitignore  CWS-LISTING.md  README.md  background.js  build-cws.sh  manifest.json  popup.css  popup.html  popup.js
clawd-cloud-os/: README.md
clawdcli/: clawd-cli.sh  clawd-register.ts  clawd-registration.json  solana-clawd-registration.json
clawdrouter/: LICENSE  README.md  package-lock.json  package.json
defi-agents/: .eslintrc.cjs  .gitattributes  .gitignore  AGENTS.md  (+13 more)
elevenlabs-mcp-main/: .gitignore  .pre-commit-config.yaml  Dockerfile  ELEVENLABS.md  LICENSE  README.md  gemini-extension.json  pyproject.toml  server.json
elevenlabs-mcp-main/.github/workflows/: publish.yml  test.yml
elevenlabs-mcp-main/elevenlabs_mcp/: __init__.py  __main__.py  convai.py  model.py  server.py  utils.py
elevenlabs-mcp-main/scripts/: build.sh  deploy.sh  dev.sh  setup.sh  test.sh
elevenlabs-mcp-main/tests/: conftest.py  test_utils.py
x402/programs/clawd-vault/: Cargo.toml
x402/programs/clawd-vault/src/: lib.rs
(+4539 files in other folders)
