[package]
name = "clawd-vault"
version = "0.1.0"
description = "ClawdRouter on-chain registry + revenue vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clawd_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
