[package]
name = "qedgen-solana-skills"
version = "1.2.0"
edition = "2021"
authors = ["abishekk92"]
description = "CLI tool for generating formal Lean 4 proofs for Solana programs powered by Mistral's Leanstral model"
license = "MIT"
repository = "https://github.com/qedgen/solana-skills"

[[bin]]
name = "qedgen"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
regex = "1"
